# starbase

./: .Rbuildignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  DBI.R  DESCRIPTION  Dockerfile  Dockerfile.base  LICENSE  LICENSE.md  NAMESPACE  README-local-pod.md  README.Rmd  README.md  SPS.R  TODO.md  add_foreign_key_constraints.py  alembic.ini  app.R  app.py  callback-factory.py  check_current_schema.py  cross-filter.py  dashboard.Rmd  docker-compose.local.yaml  docker-compose.yaml  env  env.template  environment.yaml  fix_ships_primary_keys.py  global-caching.py  link_ships_via_fasta.py  local.Dockerfile  manage_celery.py  migrate_foreign_keys.py  migrate_to_central_joined_ships.py  models.py  populate_ship_id.py  pyproject.toml  (+26 more)
R/: app_ui.R  (+28 more)
starbase-validation/: README.md  pyproject.toml  setup.py
starbase-validation/starbase_validation/: __init__.py  pipeline.py
starbase-validation/starbase_validation/config/: __init__.py  enrichment_sources.yaml  quality_rules.yaml
starbase-validation/starbase_validation/extractors/: __init__.py  mysql_extractor.py
starbase-validation/starbase_validation/loaders/: __init__.py  sqlite_loader.py  version_manager.py
starbase-validation/starbase_validation/reporters/: __init__.py  issue_exporter.py  validation_report.py
starbase-validation/starbase_validation/transformers/: __init__.py  normalizer.py  taxonomy_enricher.py
starbase-validation/starbase_validation/validators/: __init__.py  classification_validator.py  genome_validator.py  relationship_validator.py  results.py  sequence_validator.py  (+1 more)
(+454 files in other folders)
